--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
       POSTGRES_DB: example
-    volumes:
-      - ./pgdata:/var/lib/postgresql/data
+    # volumes:
+    #   - ./pgdata:/var/lib/postgresql/data
     ports:
       - "8432:5432"
 
@@ -18,6 +18,7 @@ services:
       dockerfile: ./Dockerfile
     depends_on:
       - db    
+    restart: always
     environment:
       NODE_ENV: production
     ports:
