--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -5,7 +5,7 @@
    "username": "postgres",
    "password": "postgres",
    "database": "example",
-   "synchronize": true,
+   "synchronize": false,
    "logging": false,
    "entities": [
       "src/entity/**/*.ts",
