--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "base-64": "^1.0.0",
     "correios-brasil": "^2.2.2",
     "cpf-cnpj-validator": "^1.0.3",
+    "fake-people": "^1.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
