--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,11 @@
     "@types/multer": "^1.4.3",
     "@types/node": "^8.0.29",
     "@types/puppeteer": "^5.4.3",
+    "@types/swagger-ui-express": "^4.1.2",
+    "concurrently": "^6.2.0",
+    "copyfiles": "^2.4.1",
     "nodemon": "^2.0.4",
     "ts-node": "3.3.0",
-    "copyfiles": "^2.4.1",
     "typescript": "3.3.3333"
   },
   "dependencies": {
@@ -27,6 +29,9 @@
     "puppeteer": "^9.1.1",
     "puppeteer-core": "^9.1.1",
     "reflect-metadata": "^0.1.10",
+    "swagger-ui": "^3.50.0",
+    "swagger-ui-express": "^4.1.6",
+    "tsoa": "^3.8.0",
     "typeorm": "0.2.32"
   },
   "scripts": {
@@ -35,12 +40,12 @@
     "dev": "nodemon start",
     "copytemp": "copyfiles temp temp/*.txt build",
     "copytemplate": "copyfiles template template/*.html build",
-    "build": "npm run copytemp && npm run copytemplate && tsc -p .",    
+    "build": "npm run copytemp && npm run copytemplate && tsc -p .",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "start:dev": "npx ts-node-dev src/index.ts",
     "start:prod": "node src/index.js",
     "migrateAndRun:dev": "npm run typeorm:dev:migration:run && npm run start:dev",
-    "migrateAndRun:prod": "npm run typeorm:prod:migration:run && npm run start:prod",    
+    "migrateAndRun:prod": "npm run typeorm:prod:migration:run && npm run start:prod",
     "test": "echo \"Error: no test specified\" && exit 1",
     "typeorm:dev": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:prod": "./node_modules/typeorm/cli.js",
