--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "@types/swagger-ui-express": "^4.1.2",
     "concurrently": "^6.2.0",
     "copyfiles": "^2.4.1",
+    "express-swagger-generator": "^1.1.17",
     "nodemon": "^2.0.4",
     "ts-node": "3.3.0",
     "typescript": "3.3.3333"
