--- a/backend/package.json
+++ b/backend/package.json
@@ -3,23 +3,21 @@
   "version": "0.0.1",
   "description": "sofplan",
   "devDependencies": {
-    "@types/base-64": "^1.0.0",
     "@types/cors": "^2.8.6",
+    "@types/jest": "^26.0.23",
     "@types/multer": "^1.4.3",
     "@types/node": "^8.0.29",
     "@types/puppeteer": "^5.4.3",
-    "@types/swagger-ui-express": "^4.1.2",
-    "concurrently": "^6.2.0",
     "copyfiles": "^2.4.1",
     "express-swagger-generator": "^1.1.17",
     "jest": "^27.0.4",
     "nodemon": "^2.0.4",
-    "ts-node": "3.3.0",
-    "typescript": "3.3.3333"
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@types/jest": "^26.0.23",
-    "@types/supertest": "^2.0.11",
     "base-64": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -31,14 +29,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "pg": "^8.6.0",
-    "puppeteer": "^9.1.1",
-    "puppeteer-core": "^9.1.1",
     "reflect-metadata": "^0.1.10",
-    "supertest": "^6.1.3",
-    "swagger-ui": "^3.50.0",
-    "swagger-ui-express": "^4.1.6",
-    "ts-jest": "^27.0.3",
-    "tsoa": "^3.8.0",
     "typeorm": "0.2.32"
   },
   "scripts": {
@@ -53,7 +44,7 @@
     "start:prod": "node src/index.js",
     "migrateAndRun:dev": "npm run typeorm:dev:migration:run && npm run start:dev",
     "migrateAndRun:prod": "npm run typeorm:prod:migration:run && npm run start:prod",
-    "test": "jest",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "typeorm:dev": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:prod": "./node_modules/typeorm/cli.js",
     "typeorm:dev:migration:run": "npm run typeorm:dev -- migration:run",
