--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,7 @@
     "@types/multer": "^1.4.3",
     "@types/node": "^8.0.29",
     "@types/puppeteer": "^5.4.3",
-    "copyfiles": "^2.4.1",
-    "express-swagger-generator": "^1.1.17",
+    "copyfiles": "^2.4.1",    
     "jest": "^27.0.4",
     "nodemon": "^2.0.4",
     "supertest": "^6.1.3",
@@ -30,7 +29,8 @@
     "multer": "^1.4.2",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.10",
-    "typeorm": "0.2.32"
+    "typeorm": "0.2.32",
+    "express-swagger-generator": "^1.1.17"
   },
   "scripts": {
     "exec": "npm run typeorm migration:run && node index.js",
