--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,13 @@ services:
     restart: always    
     ports:
       - 8090:8090        
+  chat:    
+    image: h4liss0n/dev.sotfplan.chat:01      
+    depends_on:      
+      - serve
+    restart: always    
+    ports:
+      - 8091
   web:    
     image: h4liss0n/dev.sotfplan.frontend:01      
     depends_on:      
