--- a/socket-io/package.json
+++ b/socket-io/package.json
@@ -5,21 +5,21 @@
    "devDependencies": {
       "@types/cors": "^2.8.6",
       "@types/node": "^8.0.29",
-      "nodemon": "^2.0.4",
-      "ts-node": "3.3.0",
-      "typescript": "3.3.3333"
+      "ts-node": "^10.0.0",
+      "nodemon": "^2.0.4"
    },
    "dependencies": {
-      "body-parser": "^1.19.0",
       "cors": "^2.8.5",
       "dotenv": "^8.2.0",
       "express": "^4.15.4",
       "socket.io": "^4.0.1",
-      "uuid": "^8.3.2"
+      "typescript": "^4.3.2"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
-      "dev": "nodemon start"
+      "dev": "nodemon start",
+      "prod": "node src/index.js",
+      "build": "tsc -p ."
    },
    "nodemonConfig": {
       "ext": "ts",
