--- a/deploy/frontend/.env
+++ b/deploy/frontend/.env
@@ -1,2 +1,4 @@
 REACT_APP_NODE_ENV=development
 REACT_APP_BASE_URL=http://localhost:8090
+REACT_APP_BASE_URL_CHAT=http://localhost:8091
+REACT_APP_CLIENT_ID=553710038190-kbtjk3d3c7oc0m1c5b2h6k9gen0egthd.apps.googleusercontent.com
